[tool.poetry]
name = "matelight-pixel"
version = "1.0.0"
description = "A pixel wall for Mate-Light"
authors = ["Uwe Kamper <me@uwekamper.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "matelight_pixel"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
